--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,6 @@
 <h1>Burgers!</h1>
 
 <img src="/public/burger.jpg" style="height: 200px; width: 200px;" alt="burger">
-{{!-- <h2>Cats that are not sleepy!</h2> --}}
 
 <ul>
   {{#each burgers}}
@@ -10,8 +9,8 @@
     <li>
 	    {{this.burger_name}}
 
-	    <button class="eat-burger" data-id="{{this.id}}" data-newsleep="{{this.devoured}}">
-		    {{#if devoured}}SLEEP TIME!{{else}}DEVOUR IT{{/if}}
+	    <button class="eat-burger" data-id="{{this.id}}" data-neworder="{{this.devoured}}">
+		    {{#if devoured}}GREAT!{{else}}DEVOUR IT{{/if}}
 	    </button>
 
 	    <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
@@ -20,7 +19,6 @@
   {{/each}}
 </ul>
 
-{{!-- <h2>Cats that are sleepy!</h2> --}}
 
 <ul>
   {{#each burgers}}
@@ -29,7 +27,7 @@
 	    {{this.burger_name}}
 
 	    <button class="eat-burger" data-id="{{this.id}}" data-newsleep="{{this.devoured}}">
-		    {{#if devoured}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
+		    {{#if devoured}}GREAT!{{else}}DEVOUR IT!{{/if}}
 	    </button>
 
 	    <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
@@ -45,16 +43,11 @@
     <label for="burger">Burger:</label>
     <input type="text" id="burger" name="name">
   </div>
-{{!-- 
-  <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Sleepy!<br>
-    <input type="radio" name="devoured" value="0"> Awake
-  </div> --}}
+
 
   <button id="submit" type="submit">Add Burger</button>
 </form>
-
+{{!-- 
 <script>
     $(document).on("click", ".eat-burger", (event) => {
     // event.preventDefault()
@@ -63,4 +56,4 @@
     var value = $(this).attr("data-id")
     console.log(value);
 })
-</script>
+</script> --}}
