--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,8 +1,8 @@
 <li>
 	{{burger_name}}
 
-	<button class="eat-burger" data-id="{{this.id}}" data-newsleep="{{devoured}}">
-		{{#if devoured}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
+	<button class="eat-burger" data-id="{{this.id}}" data-neworder="{{devoured}}">
+		{{#if devoured}}Dvour{{else}}Re-order{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
