completed the post route

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
 /* .body{
     background-color: red;
 } */
+
+.delete-burger{
+    margin: 5px;
+    box-shadow: slategrey;
+}
+.eat-burger{
+    margin: 5px;
+    box-shadow: slategrey;
+}
