--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="eat-burger" data-id="{{this.id}}" data-neworder="{{devoured}}">
+	<button class="eat-burger" value="{{this.id}}" data-neworder="{{devoured}}">
 		{{#if devoured}}Dvour{{else}}Re-order{{/if}}
 	</button>
 
